# ai-assistant

./: .cursor.json  .env.example  .gitignore  AI_CLASSIFICATION_LOGIC.md  Dockerfile  README.md  TESTING_PLAN.md  TESTING_PROGRESS.md  comprehensive_integration_test.py  docker-compose.yml  error_handling_test.py  performance_test.py  test_agent_direct.py  test_agents.py  test_menu_qa_agent.py  test_orchestrator_delegation.py  test_orchestrator_format.py  test_order_history_agent.py  test_pdf_ingestion_agent.py  test_price_update_agent.py  test_with_security_headers.py
agent_template/: README.md  pyproject.toml
agent_template/agent_template/: __main__.py  agent_executor.py  prompt.py  tools.py
classification-agent/: README.md  pyproject.toml
classification-agent/classification_agent/: __init__.py  __main__.py  agent_executor.py
common_utils/: README.md  __init__.py  agent_config.py  agent_discovery.py  agent_security.py  base_agent_server.py  circuit_breaker.py  config.py  constants.py  data_handle_manager.py  database.py  enhanced_logging.py  exceptions.py  health.py  observability.py  port_manager.py  pyproject.toml  security.py  session_manager.py  types.py
common_utils/mcp_server/: tool_server.py
config/: environment.env  system_config.yaml
docs/: ARCHITECTURE.md  DEVELOPMENT_GUIDE.md  adding_agents.md
menu-qa-agent/: README.md  pyproject.toml
menu-qa-agent/menu_qa_agent/: __main__.py  agent_executor.py  prompt.py  tools.py
monitoring/: observability.py  otel-collector-config.yml  prometheus.yml
orchestrator-agent/: README.md  pyproject.toml
orchestrator-agent/orchestrator_agent/: __init__.py  __main__.py  agent_executor.py  prompt.py
orchestrator-agent/orchestrator_agent/tools/: search.py
orchestrator-agent/sessions/: sid_14c34fe3974e4ab89fde431ba417a338.json  sid_1f4ba2ff869741ea8077ec4d08d9fd7c.json  sid_227a579bccbd4f2fbcf10280fa7037e9.json  sid_3b963d20adba4b6083958c3a12b5e733.json  sid_4c554d0bc01142b5916357cdebe38dfe.json  sid_55eb979f150349928c2f7cd0db44d273.json  sid_5cfb555bb78a4ac1b58da02b9adf1428.json  sid_77db860072674540a7def764e916c8c5.json  sid_813950c0d5e6439785ade20bbaa1343f.json  sid_87475c69379a40bf8480795beeb17d0d.json  sid_a8b25ca1ef684701a2568d11809f20ed.json  sid_b9ada695f57f4ec2abbad0ca9c5efff6.json  sid_bc5cacf457914b809b3ada215ad30cca.json  sid_caed42e0e5df498091c44d0ca61bba1a.json  sid_e62c0e79a79e498b9cf0887dce8a8633.json
order-history-qa-agent/: README.md  pyproject.toml
order-history-qa-agent/order_history_qa_agent/: __main__.py  agent_executor.py  prompt.py  tools.py
pdf-ingestion-agent/: README.md  pyproject.toml
pdf-ingestion-agent/pdf_ingestion_agent/: __init__.py  __main__.py  agent.py  agent_executor.py  prompt.py  tools.py
price-update-agent/: README.md  pyproject.toml
price-update-agent/price_update_agent/: __main__.py  agent_executor.py  prompt.py  tools.py
scripts/: README.md  check_table_structure.py  cleanup_agents.bat  cleanup_agents.py  cleanup_agents.sh  create_agent.bat  create_agent.sh  create_club_management_agents.py  create_missing_tables.py  create_missing_tables.sql  create_missing_tables_simple.py  create_new_agent.py  db_connection.py  deploy.sh  integration_test_framework.py  start_system.py  start_test_environment.py  test_agent_registry.py  test_orchestrator.py  test_with_timeout.py  test_with_timeout_windows.py
scripts/configs/: ENHANCED_CONFIG_GUIDE.md  README.md  classification-agent.json  menu-qa-agent.json  order-history-qa-agent-enhanced.json  pdf-ingestion-agent.json  price-update-agent.json
tests/: README.md  __init__.py  conftest.py  pytest.ini  requirements.txt  setup_test_env.py
tests/integration/: __init__.py  test_a2a_communication.py  test_a2a_complete_system.py  test_end_to_end_workflows.py  test_observability_features.py  (+2 more)
web_ui/: app.py
