[tool.poetry]
name = "common-utils"
version = "0.1.0"
description = "Common utilities for the multi-agent system including shared A2A communication logic"
authors = ["Multi-Agent System <dev@example.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "common_utils"}]

[tool.poetry.dependencies]
python = "^3.13"
pydantic = "^2.10.6"
pydantic-settings = "^2.6.0"
fastapi = "^0.115.0"
uvicorn = "^0.34.0"
aiohttp = "^3.10.0"
google-adk = { version = "^1.2.0", optional = true }

[tool.poetry.extras]
adk = ["google-adk"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "common-utils"
version = "0.1.0"
dependencies = [
    "pydantic>=2.10.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.1",
    "PyJWT>=2.8.0",
    "aiofiles>=23.0.0",
    "cryptography>=41.0.0",
] 